TAG: pdfdownload-6-0-26-1
DATE: 08/27/2025
STAFF: lec
fix: embargoedNoPdfs_pmc.log noPdfs_pmc.log

TAG: pdfdownload-6-0-25-12
DATE: 06/26/2025
STAFF: lec
wts2-1690/e4g-297/pdfdownload: Elsevier
        modified:   elsevier/SciDirectLib.py
        modified:   elsevier/download_elsevier_papers.py
        modified:   shared/caches.py

TAG: pdfdownload-6-0-25-11
DATE: 06/10/2025
STAFF: lec
pmc/backPopulate.py; set DEBUG=False

TAG: pdfdownload-6-0-25-10
DATE: 06/02/2025
STAFF: lec
create new scripts so PMC and Elsevier can be run separately
        modified:   download_papers.sh
        new file:   download_elsevier_papers.sh
        new file:   download_pmc_papers.sh

TAG: pdfdownload-6-0-25-9
DATE: 05/12/2025
STAFF: lec
wts2-1662/e4g-254/pub med central full text changes (pdfdownload/pmc)

TAG: pdfdownload-6-0-25-8
TAG: pdfdownload-6-0-25-7
TAG: pdfdownload-6-0-25-6
TAG: pdfdownload-6-0-25-5
TAG: pdfdownload-6-0-25-4
DATE: 02/12/2025
STAFF: lec
wts2-1610/adds/subtractions to the PubMed Central Automated PDF download
wts2-1611/adds/subtractions to the Science Direct Automated PDF download

TAG: pdfdownload-6-0-25-3
TAG: pdfdownload-6-0-25-2
TAG: pdfdownload-6-0-25-1
DATE: 12/23/2024
STAFF: lec
wts2-1594/e4g-106/PMC journal being discontinued: Neural Dev, Mol Cell Biol

no delay:
    'EMBO J',
    'EMBO Rep'

1 year delay:
    'J Cell Biol' : 12,
    'J Exp Med' : 12,
    'J Virol' : 12,

TAG: pdfdownload-6-0-24-1
DATE: 11/11/2024
STAFF: lec
wts2-1574/e4g-64/Run PDF Download/Elsevier HTTP error
https://dev.elsevier.com/api_key_settings.html
__min_req_interval = 6
#       modified:   elsevier/SciDirectLib.py

TAG: pdfdownload-6-0-23-6
TAG: pdfdownload-6-0-23-5
DATE: 05/01/2024
STAFF: lec
wts2-1467/fl2-847/pdf download trackback error/elsevier
comment out: pmc/backPopulate.py/#progress("Warning: '%s'\n" % text)
curous to see what happens:  HISTORICAL_WINDOW_SIZE = 240 -> 90

TAG: pdfdownload-6-0-23-4
DATE: 03/13/2024
STAFF: sc