@@ -1,7 +1,9 @@
+TAG: pdfdownload-6-0-26-2
 TAG: pdfdownload-6-0-26-1
 DATE: 08/27/2025
 STAFF: lec
 fix: embargoedNoPdfs_pmc.log noPdfs_pmc.log
+comment out: Error finding OA link for PMC
 
 TAG: pdfdownload-6-0-25-12
 DATE: 06/26/2025
